--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -4,7 +4,11 @@
 $red: #FD1015;
 $blue: #0D6EFD;
 $yellow: #FFC65A;
-$orange: #E67E22;
 $green: #1EDD88;
 $gray: #0E0000;
-$light-gray: #F4F4F4;
+$light-gray: #F2F5EA;
+
+$ivory: #F2F5EA;
+$orange: #FF9F1C;
+$black: #231F20;
+$green: #0D5D56;
