--- a/app/assets/stylesheets/components/_container.scss
+++ b/app/assets/stylesheets/components/_container.scss
@@ -1,9 +1,8 @@
 .page-container {
-  height: calc(100vh - 50px);
+  height: auto;
   width: 100%;
-  padding: 24px;
+  padding: 16px;
   background: $ivory;
   color: $black;
   text-align: center;
-
 }
