--- a/app/views/bikes/edit.html.erb
+++ b/app/views/bikes/edit.html.erb
@@ -10,6 +10,12 @@
     <% end %>
   </div>
 
+  <div>
+  <%= link_to @bike, data: { turbo_method: :delete, turbo_confirm: "Are you sure you want to delete this listing?" } do %>
+  <i class="fa-solid fa-trash"></i>
+  <% end %>
+  </div>
+
   <div class="mt-3 mb-3">
     <%= link_to "Return To My Garage", bikes_path %>
   </div>
