nav links to correct pages complete

--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -3,6 +3,5 @@
 @import "avatar";
 @import "button";
 @import "container";
-@import "footer";
 @import "form_legend_clear";
-@import "navbar";
+@import "nav-bar";
