--- a/app/assets/stylesheets/components/_container.scss
+++ b/app/assets/stylesheets/components/_container.scss
@@ -1,7 +1,8 @@
 .page-container {
-  height: auto;
+  height: calc(100vh - 75px);
   width: 100%;
-  padding: 16px;
+  padding: 16px 16px 0 16px;
+  margin: 0;
   background: $ivory;
   color: $black;
   text-align: center;
