--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
 
   <body>
     <%= yield %>
-    <%= render 'layouts/footer' unless @disable_footer%>
+    <%= render 'layouts/navbar' unless @disable_navbar%>
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
   </body>
