--- a/app/assets/stylesheets/components/_container.scss
+++ b/app/assets/stylesheets/components/_container.scss
@@ -7,3 +7,38 @@
   color: $black;
   text-align: center;
 }
+
+.profile-container {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.avatar-container {
+  width: 100%;
+  height: 20vh;
+  margin: 32px 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.profile-info-container {
+  width: 100%;
+  height: auto;
+  flex-grow: 1;
+}
+
+.profile-button-container {
+  width: 100%;
+  height: 100px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  a {
+    text-decoration: none;
+    color: $ivory;
+    font-weight: 400;
+  }
+}
