--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -24,7 +24,7 @@
                 required: true,
                 input_html: { autocomplete: "new-password" } %>
   </div>
-
+  <%= link_to "Sign in with Strava", user_strava_omniauth_authorize_path, data: {turbo: false} %>
   <div class="form-actions">
     <%= f.button :submit, "Sign up" %>
   </div>
