Changed the datatype of time_until_check in the component model

--- a/app/views/bike_components/new.html.erb
+++ b/app/views/bike_components/new.html.erb
@@ -3,7 +3,9 @@
 <h2>New Bike Component Page</h2>
 
   <% @components.each do |component| %>
+    <% if component.custom == false %>
     <%= component.name %>
+    <% end %>
   <% end %>
 
   <div>
