--- a/app/assets/stylesheets/components/_simple_form.scss
+++ b/app/assets/stylesheets/components/_simple_form.scss
@@ -4,12 +4,13 @@
     border: 1px solid $orange;
     border-radius: 8px;
     color: $black;
+    opacity: 75%;
   }
 }
 
 .form-control:focus {
   box-shadow: 0 0 0 0.25rem $orange;
-  border: none;
+  border: 1px solid $orange;
   background-color: white;
   color: $black;
 }
