--- a/app/assets/stylesheets/components/_container.scss
+++ b/app/assets/stylesheets/components/_container.scss
@@ -46,3 +46,12 @@
     font-weight: 400;
   }
 }
+
+.bike_image_container {
+  width: 20%;
+  height: 5vh;
+  margin: 32px 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
