--- a/app/views/bikes/index.html.erb
+++ b/app/views/bikes/index.html.erb
@@ -2,6 +2,15 @@
   <h1>Bike index page</h1>
 
   <% @bikes.each do |bike| %>
+    <% if bike.make != "" && bike.model != "" %>
+      <h2>My <%= bike.make %> <%= bike.model %></h2>
+    <% elsif bike.make != "" && bike.model == "" %>
+      <h2>My <%= bike.make %></h2>
+    <% elsif bike.make == "" && bike.model != "" %>
+      <h2>My <%= bike.model %></h2>
+    <% else %>
+      <h2>My Bike</h2>
+    <% end %>
 
 
     <% bike.bike_components.each do |bike_component| %>
