--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -13,7 +13,7 @@
     </div>
 
     <div class="form-actions">
-     <button> <%= f.button :submit, "Reset" %> </button>
+     <%= f.button :submit, "Reset", class: "custom-btn" %>
     </div>
   <% end %>
 
