--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,10 @@
   </head>
 
   <body>
+    <%= render 'shared/flashes' %>
     <%= yield %>
-    <%= render 'layouts/navbar' unless @disable_navbar%>
+    <% unless @disable_navbar %>
+      <%= render 'layouts/navbar' %>
+    <% end %>
   </body>
 </html>
