--- a/app/views/bikes/index.html.erb
+++ b/app/views/bikes/index.html.erb
@@ -6,33 +6,35 @@
     <% @bikes.each do |bike| %>
     <div>
         <% if bike.photo.attached? %>
-          <%= cl_image_tag(bike.photo.key, class:"img-thumbnail") %>
+          <%= cl_image_tag(bike.photo.key, class:"bike_display_image") %>
         <% else %>
           <%= image_tag "https://i.etsystatic.com/19543171/r/il/f13c94/4513785165/il_fullxfull.4513785165_h290.jpg" %>
          <% end %>
     </div>
 
       <% if bike.make != "" && bike.model != "" %>
-        <h2>My <%= bike.make %> <%= bike.model %></h2>
+        <h4>My <%= bike.make %> <%= bike.model %></h4>
       <% elsif bike.make != "" && bike.model == "" %>
-        <h2>My <%= bike.make %></h2>
+        <h4>My <%= bike.make %></h4>
       <% elsif bike.make == "" && bike.model != "" %>
-        <h2>My <%= bike.model %></h2>
+        <h4>My <%= bike.model %></h4>
       <% else %>
-        <h2>My Bike</h2>
+        <h4>My Bike</h4>
       <% end %>
 
+    <div class="justify-content: center">
       <% bike.bike_components.each do |bike_component| %>
     <div>
       <%= bike_component.component.name %>
-      <%= cl_image_tag(bike_component.component.icon.key, class:"img-thumbnail") %>
+      <%= cl_image_tag(bike_component.component.icon.key, class:"component_display_image") %>
       <% end %>
     </div>
       <%= link_to "Add Component", new_bike_bike_component_path(bike) %>
       <%= link_to "Edit Bike Make/Model", edit_bike_path(bike) %>
     <% end %>
-    <h2>Add a Bike</h2>
+    <h4>Add a Bike</h4>
     <%= link_to "+", new_bike_path %>
   </div>
 
+</div>
 </div>
