--- a/app/views/pages/show.html.erb
+++ b/app/views/pages/show.html.erb
@@ -20,21 +20,21 @@
     </div>
   </div>
 
-  <div class="container">
-  <div class="row justify-content-center">
-    <div class="col-sm-8">
-      <div id="shops">
-        <% if @bike_shops.any? %>
-          <% @bike_shops.each do |shop| %>
-            <h4><%= shop.name %></h4>
-            <p><%= shop.location %></p>
-          <% end %>
-        <% else %>
-          <em>Sorry, no shops found.</em>
+  <div class="container_shops">
+      <% if @bike_shops.any? %>
+        <% @bike_shops.each do |shop| %>
+          <div class="shop-card">
+            <div class="shop-card-image"></div>
+            <div class="shop-card-info">
+              <h4> <%= shop.name %> </h4>
+              <p> <%= shop.location %> </p>
+              <p> <%= shop.website %> </p>
+            </div>
+          </div>
         <% end %>
-      </div>
-    </div>
+      <% else %>
+        <em>Sorry, no shops found.</em>
+      <% end %>
   </div>
-</div>
 
 </div>
