--- a/app/assets/stylesheets/components/_container.scss
+++ b/app/assets/stylesheets/components/_container.scss
@@ -67,3 +67,22 @@
   width: 100%;
   height: auto;
 }
+
+.bike-image-container {
+  width: 100%;
+  height: auto;
+  img {
+    padding: 0;
+  }
+}
+
+.component-container {
+  width: 100%;
+  height: auto;
+  border: 1px solid blue;
+  padding: 8px;
+  margin: 8px 0;
+  .progress-bar-text {
+    text-align: left;
+  }
+}
