--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -30,7 +30,19 @@
   }
 }
 
-.component-card {
-  border: 1px solid red;
+.bike-card {
   margin: 24px 0;
+}
+
+.component-card {
+  width: 100%;
+  height: auto;
+  background-color: $green;
+  color: $ivory;
+  border-radius: 8px;
+  padding: 8px;
+  margin: 8px 0;
+  .progress-bar-text {
+    text-align: left;
+  }
 }
