--- a/app/views/bikes/index.html.erb
+++ b/app/views/bikes/index.html.erb
@@ -1,57 +1,43 @@
 <div class="page-container">
-
   <h1>My Garage</h1>
-
   <div class ="container-sm">
     <% @bikes.each do |bike| %>
-    <div>
+      <div>
         <% if bike.photo.attached? %>
           <%= cl_image_tag(bike.photo.key, class:"img-thumbnail") %>
         <% else %>
           <%= image_tag "https://i.etsystatic.com/19543171/r/il/f13c94/4513785165/il_fullxfull.4513785165_h290.jpg" %>
-         <% end %>
-    </div>
-
-  <% @bikes.each do |bike| %>
-    <% if bike.make != "" && bike.model != "" %>
-      <h2>My <%= bike.make %> <%= bike.model %></h2>
-    <% elsif bike.make != "" && bike.model == "" %>
-      <h2>My <%= bike.make %></h2>
-    <% elsif bike.make == "" && bike.model != "" %>
-      <h2>My <%= bike.model %></h2>
-    <% else %>
-      <h2>My Bike</h2>
-    <% end %>
-    <% bike.bike_components.each do |bike_component| %>
-    <%= bike_component.component.name %>
-    <div style="text-align:left; font-size:10px; font-weight:bold;">
-    Time left until check:
-    <div class="progress">
-      <div class="progress-bar" role="progressbar" style="width: <%= @time_progress_percentage %>%" aria-valuenow="<%= @time_progress_percentage %>" aria-valuemin="0" aria-valuemax="100">
-      <div class="px-3">
-      <% if @weeks_left > 2%>
-      <%= @weeks_left.to_i %> weeks
-      <% elsif @weeks_left > 0 && @weeks_left <= 2 %>
-      <%= @days_left.to_i %> days
+          <% end %>
+      </div>
+      <% if bike.make != "" && bike.model != "" %>
+        <h2>My <%= bike.make %> <%= bike.model %></h2>
+      <% elsif bike.make != "" && bike.model == "" %>
+        <h2>My <%= bike.make %></h2>
+      <% elsif bike.make == "" && bike.model != "" %>
+        <h2>My <%= bike.model %></h2>
       <% else %>
-      Check now!
+        <h2>My Bike</h2>
       <% end %>
-      </div>
-      </div>
-    </div>
-    </div>
-    <% end %>
-    <%= link_to "Add Component", new_bike_bike_component_path(bike) %>
-    <%= link_to "Edit Bike Make/Model", edit_bike_path(bike) %>
-  <% end %>
-  <h2>Add a Bike</h2>
-  <%= link_to "+", new_bike_path %>
-
       <% bike.bike_components.each do |bike_component| %>
-        <div>
-          <%= bike_component.component.name %>
-          <%= cl_image_tag(bike_component.component.icon.key, class:"img-thumbnail") %>
+        <%= bike_component.component.name %>
+        <%# <%= cl_image_tag(bike_component.component.icon.key, class:"img-thumbnail") %>
+        <div style="text-align:left; font-size:10px; font-weight:bold;">
+          Time left until check:
+          <div class="progress">
+            <div class="progress-bar" role="progressbar" style="width: <%= bike_component.time_progress_percentage %>%" aria-valuenow="<%= bike_component.time_progress_percentage %>" aria-valuemin="0" aria-valuemax="100">
+              <div class="px-3">
+                <% if bike_component.weeks_left > 2%>
+                  <%= bike_component.weeks_left.to_i %> weeks
+                <% elsif bike_component.weeks_left > 0 && bike_component.weeks_left <= 2 %>
+                  <%= bike_component.days_left.to_i %> days
+                <% else %>
+                  Check now!
+                <% end %>
+              </div>
+            </div>
+          </div>
         </div>
+        <%= link_to "More info about your #{bike_component.component.name}", bike_bike_component_path(bike, bike_component) %>
       <% end %>
       <%= link_to "Add Component", new_bike_bike_component_path(bike) %>
       <%= link_to "Edit Bike Make/Model", edit_bike_path(bike) %>
