--- a/app/assets/stylesheets/components/_progress_bar.scss
+++ b/app/assets/stylesheets/components/_progress_bar.scss
@@ -1,12 +1,20 @@
 .progress {
   width: 100%;
   height: 30px;
+  border-radius: 16px;
 }
 
 .progress-bar {
   background-color: $orange;
-  border-radius: 5px;
+  border-radius: 16px;
+  padding: 0 16px;
   color: $black;
   overflow: visible;
   font-weight: bold;
+  display: flex;
+  align-items: start;
+  p {
+    font-size: 20px;
+    position: relative;
+  }
 }
