--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
   </head>
 
   <body>
-    <%= render 'shared/flashes' %>
+    <%# <%= render 'shared/flashes' %>
     <%= yield %>
     <% unless @disable_navbar %>
       <%= render 'layouts/navbar' %>
