small changed to bike index page

--- a/app/assets/stylesheets/components/_container.scss
+++ b/app/assets/stylesheets/components/_container.scss
@@ -54,14 +54,14 @@
   margin: 16px 0;
 }
 
-.bike_image_container {
-  width: 20%;
-  height: 5vh;
-  margin: 32px 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
+// .bike_image_container {
+//   width: 20%;
+//   height: 5vh;
+//   margin: 32px 0;
+//   display: flex;
+//   justify-content: center;
+//   align-items: center;
+// }
 
 .container_shops {
   width: 100%;
