--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -41,7 +41,7 @@
   color: $ivory;
   border-radius: 8px;
   padding: 8px;
-  margin: 8px 0;
+  margin: 16px 0;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -53,7 +53,8 @@
 .component-card-image {
   height: 100%;
   aspect-ratio: 1;
-  background-color: red;
+  background-color: lightgray;
+  border: 2px solid $orange;
   border-radius: 4px;
 }
 
