--- a/app/views/bikes/index.html.erb
+++ b/app/views/bikes/index.html.erb
@@ -38,7 +38,7 @@
                   <% elsif bike_component.weeks_left > 0 && bike_component.weeks_left <= 2 %>
                     <p> <%= bike_component.days_left.to_i %> days </p>
                   <% else %>
-                    <p>Check!</p>
+                    <p>Check now!</p>
                   <% end %>
                 </div>
               </div>
