--- a/app/views/bike_components/show.html.erb
+++ b/app/views/bike_components/show.html.erb
@@ -1,6 +1,8 @@
 <div class="page-container" data-controller="progress-bar" data-progress-bar-url-value="<%= bike_bike_component_url(@bike, @bike_component) %>" data-progress-bar-time-value="<%= @bike_component.time_until_check %>">
 
-  <%= link_to 'Back', :back %>
+  <%= link_to :back, class: "back-btn green" do %>
+    <i class="fa-solid fa-arrow-left"></i>
+  <% end %>
 
   <%= @bike_component.component.name %>
 
@@ -10,11 +12,11 @@
     <div class="progress-bar" role="progressbar" data-progress-bar-target="bar" style="width: <%= @bike_component.time_progress_percentage %>%" aria-valuenow="<%= @bike_component.time_progress_percentage %>" aria-valuemin="0" aria-valuemax="100">
       <div class="progress-bar-text">
         <% if @bike_component.weeks_left > 2%>
-          <%= @bike_component.weeks_left.to_i %> weeks
+          <p><%= @bike_component.weeks_left.to_i %> weeks</p>
         <% elsif @bike_component.weeks_left > 0 && @bike_component.weeks_left <= 2 %>
-          <%= @bike_component.days_left.to_i %> days
+          <p><%= @bike_component.days_left.to_i %> days</p>
         <% else %>
-          Check now!
+          <p>Check now!</p>
         <% end %>
       </div>
     </div>
@@ -22,7 +24,13 @@
 
   <p><%= @bike_component.component.check_advice %></p>
 
-  <button data-action="click->progress-bar#reset"></button>
+  <button class="custom-btn green" data-action="click->progress-bar#reset">I've Replaced My <%= @bike_component.component.name %></button>
+
+  <p>If you feel this component needs replacing, either replace it yourself or use our handy Bike Shop Locator tool below!</p>
+
+  <%= link_to "Bike Shop Locator", shop_locator_path, class: "custom-btn green"%>
+
+
 
 </div>
 
