--- a/app/assets/stylesheets/components/_container.scss
+++ b/app/assets/stylesheets/components/_container.scss
@@ -1,7 +1,7 @@
 .page-container {
-  height: calc(100vh - 75px);
+  height: 100vh;
   width: 100%;
-  padding: 24px 24px 0 24px;
+  padding: 24px 24px 0px 24px;
   margin: 0;
   background: $ivory;
   color: $black;
