Added pills to my garage

--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -7,5 +7,6 @@
 @import "form_legend_clear";
 @import "logo";
 @import "nav-bar";
+@import "nav-pills";
 @import "progress_bar";
 @import "simple_form";
