map sorted - search not sensitive, one icon per shop appears on the map, added rating and website to shop cards, changed phone_number to text on schema

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -1,6 +1,6 @@
 .shop-card {
   width: 100%;
-  height: 100px;
+  height: 150px;
   margin-bottom: 16px;
   padding: 8px;
   background-color: white;
@@ -13,7 +13,7 @@
 
 .shop-card-image {
   height: 100%;
-  width: 120px;
+  aspect-ratio: 1;
   background-color: $green;
   opacity: 50%;
   border-radius: 8px;
