--- a/app/views/bike_components/show.html.erb
+++ b/app/views/bike_components/show.html.erb
@@ -3,7 +3,7 @@
   <div class="comp-show-page-header">
 
     <div class="back-btn-container">
-      <%= link_to :back, class: "back-btn green" do %>
+      <%= link_to :back do %>
         <i class="fa-solid fa-arrow-left"></i>
       <% end %>
     </div>
