--- a/app/views/pages/show.html.erb
+++ b/app/views/pages/show.html.erb
@@ -28,7 +28,13 @@
             <div class="shop-card-info">
               <h4> <%= shop.name %> </h4>
               <p> <%= shop.location %> </p>
-              <p> 0<%= shop.phone_number %> </p>
+              <p> <%= shop.website %> </p>
+              <p> <%= shop.phone_number %> </p>
+              <p>
+                <% shop.rating.times do %>
+                  <%= "⭐️" %>
+                <% end %>
+              </p>
             </div>
           </div>
         <% end %>
