--- a/app/views/bikes/index.html.erb
+++ b/app/views/bikes/index.html.erb
@@ -40,7 +40,9 @@
         <%= link_to bike_bike_component_path(bike, bike_component) do %>
         <div class="component-card">
           <div class="card-image-info-wrapper">
-            <div class="component-card-image"></div>
+            <div class="component-card-image">
+            <%= cl_image_tag(bike_component.component.icon.key, class:"img-thumbnail") %>
+            </div>
             <div class="progress-info">
               <h2> <%= bike_component.component.name %> </h2>
               <div class="progress-bar-text">
