Added pop ups for deleting a bike and resetting check meter

--- a/app/views/bike_components/show.html.erb
+++ b/app/views/bike_components/show.html.erb
@@ -24,7 +24,7 @@
 
   <p><%= @bike_component.component.check_advice %></p>
 
-  <button class="custom-btn green" data-action="click->progress-bar#reset">I've Replaced My <%= @bike_component.component.name %></button>
+  <button class="custom-btn green" data-action="click->progress-bar#reset">I've Checked My <%= @bike_component.component.name %></button>
 
   <p>If you feel this component needs replacing, either replace it yourself or use our handy Bike Shop Locator tool below!</p>
 
