--- a/app/views/bikes/edit.html.erb
+++ b/app/views/bikes/edit.html.erb
@@ -10,10 +10,12 @@
     <% end %>
   </div>
 
-  <div>
-  <%= link_to @bike, data: { turbo_method: :delete, turbo_confirm: "Are you sure you want to delete this listing?" } do %>
-  <i class="fa-solid fa-trash"></i>
-  <% end %>
+  <div data-controller="delete-check">
+    <button data-action="click->delete-check#delete", class="custom-btn red">
+      Delete This Bike
+    </button>
+    <%# this link is triggered by stimulus (delete-check) %>
+    <%= link_to "", bike_path(@bike), data: { 'delete-check-target' => "link", turbo_method: :delete } %>
   </div>
 
   <div class="mt-3 mb-3">
