--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -35,8 +35,6 @@
 }
 
 .component-card {
-  width: 100%;
-  height: 120px;
   background-color: $green;
   color: $ivory;
   border-radius: 8px;
@@ -50,17 +48,18 @@
   }
 }
 
+.component-card-image img {
+  max-height: 61px;
+
+}
+
 .component-card-image {
-  height: 100%;
-  aspect-ratio: 1;
   background-color: lightgray;
   border: 2px solid $orange;
   border-radius: 4px;
 }
 
 .card-image-info-wrapper {
-  height: 100%;
-  width: 100%;
   padding: 0 0 8px 0;
   display: flex;
   justify-content: space-between;
