--- a/app/views/bikes/index.html.erb
+++ b/app/views/bikes/index.html.erb
@@ -41,7 +41,7 @@
         <div class="component-card">
           <div class="card-image-info-wrapper">
             <div class="component-card-image">
-            <%= cl_image_tag(bike_component.component.icon.key, class:"img-thumbnail") %>
+            <%= cl_image_tag(bike_component.component.icon.key, class:"bike-component-image") %>
             </div>
             <div class="progress-info">
               <h2> <%= bike_component.component.name %> </h2>
@@ -58,12 +58,10 @@
           </div>
             <div class="progress">
               <div class="progress-bar" role="progressbar" style="width: <%= bike_component.time_progress_percentage %>%" aria-valuenow="<%= bike_component.time_progress_percentage %>" aria-valuemin="0" aria-valuemax="100">
-
               </div>
             </div>
         </div>
         <% end %>
-
       <% end %>
 
       <p> <%= link_to "Add Component", new_bike_bike_component_path(bike) %> </p>
