--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -6,10 +6,16 @@
   color: $ivory !important;
   font-family: $body-font;
   font-weight: 700;
+  box-shadow: 0px 0px 2px #FF9F1C;
+  transition: 0.1s;
   border: none;
   a {
     opacity: 100%;
     color: $ivory;
+  }
+  &:active {
+    box-shadow: none;
+    transform: scale(0.98);
   }
 }
 
@@ -37,11 +43,21 @@
 }
 
 .green {
+  box-shadow: 0px 0px 2px #0D5D56;
   background-color: $green;
   color: $ivory;
+  &:active {
+    box-shadow: none;
+    transform: scale(0.98);
+  }
 }
 
 .red {
   background-color: $green;
+  box-shadow: 0px 0px 2px #d33;
   color: #d33;
+  &:active {
+    box-shadow: none;
+    transform: scale(0.98);
+  }
 }
