--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,4 +1,14 @@
 <h2>Edit <%= resource_name.to_s.humanize %></h2>
+<div class="page-container">
+ <!-- <%= form_for current_user, url: user_path(current_user), html: { method: :patch, multipart: true } do |f| %>
+    <div class="form-inputs">
+      <%= f.file_field :profile_image %>
+      <%= f.submit 'Upload Image' %>
+    </div>
+  <% end %> -->
+
+
+
 
 <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
   <%= f.error_notification %>
@@ -21,15 +31,18 @@
                 hint: "we need your current password to confirm your changes",
                 required: true,
                 input_html: { autocomplete: "current-password" } %>
+    <%= f.input :profile_image, as: :file %>
+ <!--  <%= f.input :profile_image, as: :file %> -->
   </div>
 
   <div class="form-actions">
-    <%= f.button :submit, "Update" %>
+    <%= f.button :submit, "Update", class: 'btn btn-primary' %>
   </div>
 <% end %>
 
-<h3>Cancel my account</h3>
+<%# <h3>Cancel my account</h3>
 
-<div>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?", turbo_confirm: "Are you sure?" }, method: :delete %></div>
+<div>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?", turbo_confirm: "Are you sure?" }, method: :delete %>
 
 <%= link_to "Back", :back %>
+</div>
