--- a/app/views/bikes/index.html.erb
+++ b/app/views/bikes/index.html.erb
@@ -5,7 +5,7 @@
 <ul class="nav nav-pills mb-3 justify-content-center" id="pills-tab" role="tablist">
 <% @bikes.each_with_index do |bike, index|  %>
   <li class="nav-item" role="presentation">
-    <button class="nav-link custom-btn <%= "active" if index == 0 %>" id="pills-<%= index %>-tab" data-bs-toggle="pill" data-bs-target="#pills-<%= index %>" type="button" role="tab" aria-controls="pills-<%= index %>" aria-selected="true"><%= index + 1 %></button>
+    <button class="nav-link custom-btn <%= "active" if index == 0 %>" id="pills-<%= index %>-tab" data-bs-toggle="pill" data-bs-target="#pills-<%= index %>" type="button" role="tab" aria-controls="pills-<%= index %>" aria-selected="true"><%= bike.model %></button>
   </li>
   <% end %>
 </ul>
@@ -39,10 +39,10 @@
       <% bike.bike_components.each do |bike_component| %>
         <%= link_to bike_bike_component_path(bike, bike_component) do %>
         <div class="component-card">
-          <div class="card-image-info-wrapper">
-            <div class="component-card-image">
+          <div class="component-card-image">
             <%= cl_image_tag(bike_component.component.icon.key, class:"bike-component-image") %>
-            </div>
+          </div>
+          <div class="card-image-info-wrapper">
             <div class="progress-info">
               <h2> <%= bike_component.component.name %> </h2>
               <div class="progress-bar-text">
@@ -55,11 +55,11 @@
                   <% end %>
                 </div>
             </div>
-          </div>
             <div class="progress">
               <div class="progress-bar" role="progressbar" style="width: <%= bike_component.time_progress_percentage %>%" aria-valuenow="<%= bike_component.time_progress_percentage %>" aria-valuemin="0" aria-valuemax="100">
               </div>
             </div>
+          </div>
         </div>
         <% end %>
       <% end %>
