--- a/app/assets/stylesheets/components/_progress_bar.scss
+++ b/app/assets/stylesheets/components/_progress_bar.scss
@@ -23,11 +23,12 @@
   width: auto;
   flex-grow: 1;
   text-align: start;
-  padding: 0 0 0 16px;
+  margin-bottom: 10px;
   p {
     margin: 0;
   }
   h2 {
     font-weight: 700;
+    margin-bottom: 0;
   }
 }
